# ai-bookmark-organizer

./: README.md  docker-compose.yml  main.py  phase_1_site_detail_fetcher.py  phase_2_category_reducer.py  phase_3_subcategory_classifier.py  pyproject.toml
prompts/: dead_alive_template.jinja  system_prompt.jinja
